added "--enable-native-access=ALL-UNNAMED" as JVM option for Java versions 17 and later