@@ -15,7 +15,7 @@
 
 /*
  * Launcher.java
- * Copyright (C) 2011-2024 University of Waikato, Hamilton, New Zealand
+ * Copyright (C) 2011-2025 University of Waikato, Hamilton, New Zealand
  */
 package adams.core.management;
 
@@ -766,6 +766,8 @@ public class Launcher {
     if (result == null) {
       while ((value = OptionUtils.removeOption(options, "-jvm")) != null)
         launcher.addJVMOption(value);
+      if (Java.getMajorVersion() >= 17)
+	launcher.addJVMOption("--enable-native-access=ALL-UNNAMED");
     }
 
     // classpath augmenters
